--- a/sites/all/themes/slac/css/pages.css
+++ b/sites/all/themes/slac/css/pages.css
@@ -366,7 +366,7 @@ header, .content-wrapper, .footer-wrapper {
 .not-front #content {
   width: 100%;
   max-width: 1432px;
-  padding: 30px 0 32px;
+  padding: 40px 0 32px;
   margin: auto;
   background: #fbf9f9;
 }
